--- a/Test/Glasswall.Authorisation.Tokens.Tests.L1/Convesys.Authorisation.Tokens.Tests.L1.csproj
+++ b/Test/Glasswall.Authorisation.Tokens.Tests.L1/Convesys.Authorisation.Tokens.Tests.L1.csproj
@@ -21,8 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\Glasswall.Authorisation.Tokens\Convesys.Platform.Web.Tokens.csproj" />
-    <ProjectReference Include="..\..\Source\Glasswall.HttpClient\Convesys.Platform.Web.HttpClient.csproj" />
+    <ProjectReference Include="..\..\Source\Convesys.Authorisation.Tokens\Convesys.Platform.Web.Tokens.csproj" />
   </ItemGroup>
 
 </Project>
