--- a/Test/Glasswall.HttpClient.Tests.L0/Convesys.HttpClient.Tests.L0.csproj
+++ b/Test/Glasswall.HttpClient.Tests.L0/Convesys.HttpClient.Tests.L0.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\Glasswall.HttpClient\Convesys.Platform.Web.HttpClient.csproj" />
+    <ProjectReference Include="..\..\Source\Convesys.HttpClient\Convesys.Platform.Web.HttpClient.csproj" />
   </ItemGroup>
 
 </Project>
