--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/Test/Glasswall.HttpClient.Tests.L0/desktop.ini
+/Source/Convesys.Web.Api.Client/desktop.ini
