--- a/Source/Convesys.HttpClient/Convesys.Platform.Web.HttpClient.csproj
+++ b/Source/Convesys.HttpClient/Convesys.Platform.Web.HttpClient.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="desktop.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Convesys.Kernel.Web" Version="1.0.0" />
     <PackageReference Include="Convesys.Platform.Cryptography" Version="1.0.0" />
   </ItemGroup>
@@ -21,9 +25,6 @@
   <ItemGroup>
     <Reference Include="Convesys.Kernel.Logging">
       <HintPath>..\..\..\Convesys.Platform.Kernel\Convesys.Kernel.Logging\bin\Debug\net6.0\Convesys.Kernel.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Convesys.Providers.Logging.Microsoft">
-      <HintPath>..\..\..\Convesys.Platform.Providers\Convesys.Providers.Logging.Microsoft\bin\Debug\net6.0\Convesys.Providers.Logging.Microsoft.dll</HintPath>
     </Reference>
   </ItemGroup>
 
