--- a/Source/Convesys.Platform.Web.Middleware/Convesys.Platform.Web.Middleware.csproj
+++ b/Source/Convesys.Platform.Web.Middleware/Convesys.Platform.Web.Middleware.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="desktop.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
