--- a/Test/Glasswall.Authorisation.Tokens.Tests.L1/Convesys.Authorisation.Tokens.Tests.L1.csproj
+++ b/Test/Glasswall.Authorisation.Tokens.Tests.L1/Convesys.Authorisation.Tokens.Tests.L1.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="desktop.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0-preview-20180807-05" />
     <PackageReference Include="Moq" Version="4.9.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
