--- a/Source/Convesys.HttpClient/Twilight.Platform.Web.HttpClient.csproj
+++ b/Source/Convesys.HttpClient/Twilight.Platform.Web.HttpClient.csproj
@@ -17,4 +17,9 @@
     <None Remove="desktop.ini" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Twilight.Platform.Kernel.Logging" Version="1.0.0" />
+    <PackageReference Include="Twilight.Platform.Kernel.Security" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
