--- a/Source/Convesys.Web.Api.Client/Twilight.Platform.Web.Api.Client.csproj
+++ b/Source/Convesys.Web.Api.Client/Twilight.Platform.Web.Api.Client.csproj
@@ -21,8 +21,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Twilight.Platform.Kernel.Logging" Version="1.0.0" />
-    <PackageReference Include="Twilight.Platform.Kernel.Web" Version="1.0.0" />
+    <PackageReference Include="Twilight.Platform.Kernel.Caching" Version="1.0.0" />
+    <PackageReference Include="Twilight.Platform.Web.HttpClient" Version="1.0.0" />
+    <PackageReference Include="Twilight.Platform.Web.Tokens" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
