--- a/Source/Convesys.Web.Api.Client/Twilight.Platform.Web.Api.Client.csproj
+++ b/Source/Convesys.Web.Api.Client/Twilight.Platform.Web.Api.Client.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Twilight.Platform.Kernel.Caching" Version="1.0.0" />
     <PackageReference Include="Twilight.Platform.Web.HttpClient" Version="1.0.0" />
     <PackageReference Include="Twilight.Platform.Web.Tokens" Version="1.0.0" />
+    <PackageReference Include="Twilight.Providers.MemoryCache" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
